--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ProjetDs">
-        <activity android:name=".MainActivity3"></activity>
-        <activity android:name=".MainActivity2">
+        <activity android:name=".splash"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity3" />
+        <activity android:name=".MainActivity2">
+
+        </activity>
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
